Fixed mobile bugs, now works fine on mobile. Tested in Chrome, FF, Safari Removed unnecessary upload button Fixed some tool logic

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,10 @@
+.logo-wrapper {
+    height: 100%;
+}
+
 .logo {
-    margin-top: 10px;
+    margin-top: 2%;
+    height: 85%;
 }
 
 .edit-menu {
